--- a/style.css
+++ b/style.css
@@ -62,10 +62,17 @@ a {
     color: var(--accent-color);
 }
 
+.container {
+    text-align: center;
+}
+
 .footer {
     display: flex;
-    width: 100;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
     height: 68px;
+    clear: both;
     padding: 8px 12px;
     background-color: var(--background-color);
     
@@ -78,8 +85,10 @@ a {
 .footer_text {
     display: flex;
     color: var(--text-color);
-    position: relative;
-    left: 320px;
+    position: absolute;
+    margin-left: 160px;
+    right: 400px;
+    font-size: 20px;
 }
 
 .footer_copy {
